# socially_normative_navigation

./: LICENSE  README.md
behavior_functions/: CMakeLists.txt  package.xml
behavior_functions/include/behavior_functions/: flow_cost_function.h  social_compliance_cost.h
behavior_layers/flow_behavior_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
behavior_layers/flow_behavior_layer/cfg/: FlowBehaviorLayer.cfg  behaviors.yaml
behavior_layers/flow_behavior_layer/include/flow_behavior_layer/: commons.h  cost_function.h  flow_behavior_layer.h
behavior_layers/flow_behavior_layer/src/: flow_behavior_layer.cpp
behavior_layers/overtaking_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
behavior_layers/overtaking_layer/config/: OvertakingLayer.cfg
behavior_layers/overtaking_layer/include/overtaking_layer/: overtaking_layer.h
behavior_layers/overtaking_layer/src/: overtaking_layer.cpp
behavior_layers/social_compliance_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
behavior_layers/social_compliance_layer/cfg/: SocialComplianceLayer.cfg  behavior_parameters.yaml  simple_behaviors.yaml
behavior_layers/social_compliance_layer/include/social_compliance_layer/: cost_function.h  social_compliance_layer.h  utils.h
behavior_layers/social_compliance_layer/scripts/: mock_annotations.py  mock_groups.py  mock_tracks.py  test_features.py  test_info_screen.py
behavior_layers/social_compliance_layer/src/: social_compliance_layer.cpp
behavior_layers/social_compliance_layer/test/: test_compliance_features.cpp
behavior_utils/: CMakeLists.txt  package.xml
behavior_utils/include/behavior_utils/: entities.h  geometry.h  helpers.h  motion_prediction.h
normative_navigation/: CMakeLists.txt  package.xml
normative_navigation/config/behavior_parameters/: lobby.yaml
normative_navigation/config/move_base_parameters/: common.yaml  global_lobby.yaml  local_lobby.yaml  planner.yaml
normative_navigation/config/rviz/: lobby.rviz
normative_navigation/launch/: lobby.launch
normative_navigation/scripts/: mock_tracks_lobby.py  mock_tracks_static_lobby.py
overtaking_planner/: CMakeLists.txt  package.xml
overtaking_planner/include/overtaking_planner/: overtaking_planner.h
overtaking_planner/src/: overtaking_planner.cpp
snn_launchers/: CMakeLists.txt  package.xml
snn_launchers/config/behavior_parameters/: hallway.yaml  intersection.yaml  lobby.yaml
snn_launchers/config/move_base_parameters/: common.yaml  move_base.yaml  srl_eband_params.yaml
snn_launchers/config/move_base_parameters/hallway/: global.yaml  local.yaml
snn_launchers/config/move_base_parameters/intersection/: global.yaml
snn_launchers/config/move_base_parameters/lobby/: global.yaml  local.yaml
snn_launchers/config/rviz/: hallway.rviz  intersection.rviz  lobby.rviz
snn_launchers/launch/: hallway.launch  intersection.launch  lobby.launch  robot_control.launch  run_planning.launch  run_simulator.launch
snn_launchers/scenes/: hallway.xml  intersection.xml
snn_launchers/scripts/: mock_groups_lobby.py
socially_normative_navigation/: CMakeLists.txt  package.xml
