<?xml version="1.0"?>
<package>
  <name>behavior_functions</name>
  <version>0.1.0</version>
  <description>
    The behavior_functions package provides implementations of cost functions that encapsulate various normative behaviors. Cost functions are represented as a mixture of elementary features (currently only linear combinations are supported)
  </description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/behavior_functions</url>
  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>behavior_utils</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>behavior_utils</run_depend>

  <test_depend>gtest</test_depend>

</package>
