<?xml version="1.0"?>
<package>
  <name>behavior_utils</name>
  <version>0.1.0</version>
  <description>
    The behavior_utils package provides a set of utilities: types, helper functions and simple algorithms used for behavior implementation.
  </description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/behavior_utils</url>
  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>gtest</test_depend>

</package>
