<?xml version="1.0"?>
<package>
  <name>overtaking_planner</name>
  <version>0.1.0</version>
  <description>
    The overtaking_planner package provides nodes for overtaking behavior for mobile service robots as well as letting people pass.
  </description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <author email="okal@cs.uni-freiburg.de">Billy Okal</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/overtaking_planner</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>gtest</test_depend>

</package>
