<?xml version="1.0"?>
<package>
  <name>social_compliance_layer</name>
  <version>0.1.1</version>
  <description>The social_compliance_layer: cost-feature based socially normative robot navigation</description>

  <maintainer email="okal@cs.uni-freiburg.de">Billy Okal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>behavior_functions</build_depend>
  <build_depend>behavior_utils</build_depend>

  <run_depend>costmap_2d</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>behavior_functions</run_depend>
  <run_depend>behavior_utils</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>

</package>
